# cs4518

./: .gitignore  README.md
labs/Lab 1/Part 1/: readme.txt
labs/Lab 1/Part 1/GeoQuiz-Starter/GeoQuiz/: build.gradle  settings.gradle
labs/Lab 1/Part 1/GeoQuiz-Starter/GeoQuiz/app/: build.gradle
labs/Lab 1/Part 2/: learning.txt  readme.txt  writeup.txt
labs/Lab 1/Part 2/CriminalIntent/: settings.gradle.kts
labs/Lab 1/Part 2/CriminalIntent/app/: build.gradle.kts
labs/Lab 2/Part 1/step-counting-algorithm-starter/: step counting starter.ipynb  writeup.txt
labs/Lab 2/Part 1/step-counting-algorithm-starter/data/: D1_lefthand_normal_20steps.csv  D2_rightpocket_slow_20steps.csv  D3_righthand_normal_20steps_linearaccelerometer.csv  D4_rightpocket_slow_20steps_linearaccelerometer.csv  D5_lefthand_slow_circle_hop_20steps_linearaccelerometer.csv
labs/Lab 2/Part 2/: Accelerometer_Data_20250415_191855.csv  LinearAccelerometer_Data_20250415_191855.csv  P2-README.md
labs/Lab 2/Part 2/SaveAccelerometerData-starter/: settings.gradle.kts
labs/Lab 2/Part 2/SaveAccelerometerData-starter/app/: build.gradle.kts
labs/Lab 2/Part 3/: P3-README.md
labs/Lab 2/Part 3/StepCounter-starter/: local.properties  settings.gradle.kts
labs/Lab 2/Part 3/StepCounter-starter/app/: build.gradle.kts
labs/Lab 3/Part 1/: part1.md
labs/Lab 3/Part 2/inference_server_project-starter/: README.md  client.py  image_classification_server.py  pyproject.toml
notes/: 1.1 - intro.md  1.2 - Android.md
readings/: mobile and ubiquitus reading 1.md
(+36 files in other folders)
